k8s/pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80": "backendconfig"}}'
spec:
  selector:
    app.kubernetes.io/name: web-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: web-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 60
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-frontend
      annotations:
        commit_sha: "25d2afd5e2e13257a0c2f355f24b107bcd9d4c20"
    spec:
      containers:
        - image: us.gcr.io/swift-playground-fbe87/web-frontend:latest
          name: web-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
            failureThreshold: 1
          resources:
            limits:
              cpu: 40m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
      terminationGracePeriodSeconds: 60
