k8s/pod_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80": "backendconfig"}}'
spec:
  selector:
    app.kubernetes.io/name: web-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: web-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-frontend
      annotations:
        commit_sha: "%COMMIT_SHA%"
    spec:
      containers:
        - image: swiftfiddle/web-frontend:latest
          name: web-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
